--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
       rel="stylesheet"
       href="./lib/lightbox/css/lightbox.min.css"
     />
-    <link data-n-head="ssr" rel="stylesheet" href="/css/style.css" />
+    <link data-n-head="ssr" rel="stylesheet" href="./css/style.css" />
     <link
       data-n-head="ssr"
       rel="manifest"
-      href="/_nuxt/manifest.6d5d8bd4.json"
+      href="./_nuxt/manifest.6d5d8bd4.json"
       data-hid="manifest"
     />
     <link
@@ -10991,7 +10991,7 @@
         width: 20px;
       }
       .back-to-top {
-        /* display: none; */
+        display: none;
         right: 30px;
         text-align: center;
       }
@@ -13750,9 +13750,9 @@
                   navigator_color: c,
                 },
                 thank_you: {
-                  email: "jiandanigaurav@gmail.com",
+                  email: "Venkatesh Bodduru",
                   header: F,
-                  mob_no: "+91 971-293-4085",
+                  mob_no: "+91 9100140097",
                   is_enabled: a,
                   divider_color: c,
                   divider_smiley: d,
@@ -13761,23 +13761,23 @@
                   title: G,
                   header: H,
                   person_1: [
-                    { name: "Matio Edwards", relation: "Groom's father" },
-                    { name: "Lara Edwards", relation: "Groom's mother" },
+                    { name: "Prasad", relation: "Bride's brother" },
+                    { name: "Brahmaji", relation: "Bride's brother" },
                   ],
                   person_2: [
-                    { name: "Haruko Marley", relation: "Bride's father" },
-                    { name: "Reneta Marley", relation: "Bride's mother" },
-                    { name: "Vivek Marley", relation: e },
-                    { name: "Victoria Langley", relation: "Bride's sister" },
+                    { name: "Venkatesh", relation: "Bride's brother" },
+                    { name: "Krishna", relation: "Bride's brother" },
+                    { name: "Sekhar & Kamal", relation: "Bride's brother's" },
+                    { name: "Murali & Bhuvan & Ajay", relation: "Bride's brother-in-law" },
                     {
-                      name: "James Langley",
-                      relation: "Bride's brother-in-law",
+                      name: "Lakshmi, Sravani, Teja",
+                      relation: "Bride's sister's",
                     },
                   ],
                   is_enabled: a,
                   divider_color: c,
-                  person_1_name: "Edward's",
-                  person_2_name: "Langley's",
+                  person_1_name: "Siva Prasad",
+                  person_2_name: "Sridevi Mahalakshmi",
                   divider_smiley: d,
                 },
                 pre_loader: {
@@ -13843,14 +13843,14 @@
         "\u002F"
       );
     </script>
-    <script src="/_nuxt/b6acedc.js" defer></script>
-    <script src="/_nuxt/a599e20.js" defer></script>
-    <script src="/_nuxt/b77f970.js" defer></script>
-    <script src="/_nuxt/cbd026e.js" defer></script>
-    <script src="/_nuxt/fcf1f55.js" defer></script>
-    <script src="/_nuxt/4e98486.js" defer></script>
-    <script src="/_nuxt/cb2a97d.js" defer></script>
-    <script src="/_nuxt/27eea4b.js" defer></script>
-    <script src="/_nuxt/57ea65e.js" defer></script>
+    <script src="./_nuxt/b6acedc.js" defer></script>
+    <script src="./_nuxt/a599e20.js" defer></script>
+    <script src="./_nuxt/b77f970.js" defer></script>
+    <script src="./_nuxt/cbd026e.js" defer></script>
+    <script src="./_nuxt/fcf1f55.js" defer></script>
+    <script src="./_nuxt/4e98486.js" defer></script>
+    <script src="./_nuxt/cb2a97d.js" defer></script>
+    <script src="./_nuxt/27eea4b.js" defer></script>
+    <script src="./_nuxt/57ea65e.js" defer></script>
   </body>
 </html>
